Z-index fixes

--- a/source/sass/components/article-page.scss
+++ b/source/sass/components/article-page.scss
@@ -182,6 +182,7 @@
   border-top: 0;
   padding-top: 29px;
   padding-bottom: 22px;
+  z-index: 10;
 
   .dropdown-item {
     color: $gray-60;
